force-app/main/default/objects/Dados_colaborador__c/Dados_colaborador__c.object-meta.xml
<CustomObject>
    <label>Dados colaborador</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dados colaboradores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>