force-app/main/default/objects/Dados_colaborador__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dados colaboradores</relationshipLabel>
    <relationshipName>Dados_colaboradores</relationshipName>
    <type>Lookup</type>
</CustomField>