force-app/main/default/objects/Dados_colaborador__c/fields/Data_de_admissao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_admissao__c</fullName>
    <formula>Contato__r.Admissao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de admissão</label>
    <type>Date</type>
</CustomField>