force-app/main/default/objects/Dados_colaborador__c/fields/Data_de_afastamento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_afastamento__c</fullName>
    <formula>Contato__r.Data_de_afastamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de afastamento</label>
    <type>Date</type>
</CustomField>