force-app/main/default/objects/Dados_colaborador__c/fields/Saldo_de_ferias__c.field-meta.xml
<CustomField>
    <fullName>Saldo_de_ferias__c</fullName>
    <formula>Contato__r.Saldo_de_ferias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo de férias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>