force-app/main/default/objects/Dados_colaborador__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contato__c</columns>
    <columns>RG__c</columns>
    <columns>CPF__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>